# cellular_automaton

./: CMakeLists.txt
app/: automaton.cc  gol.cc
include/: argparse.hpp  engine.hpp  rule.hpp  state.hpp
src/: argparse.cc  rule.cc
